feat: 좌표상의 매물 목록 조회 구현
